# CGAO

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  detail_state.txt  pyproject.toml  requirements.txt  state.txt  test_playwright.py
backup/v0.2.9/: ChatGPT.csv  Claude.csv  DeepSeek.csv  Gemini.csv  Midjourney.csv  cgao.db
cgao/: __init__.py  config.py  logger.py
cgao/cli/: __init__.py  main.py
cgao/collector/: __init__.py  base_collector.py  comment_collector.py  detail_collector.py  search_collector.py  threaded_detail_collector.py
cgao/core/: __init__.py  browser.py  config.py  constants.py  logger.py
cgao/crawler/: base.py  browser.py  cookie.py  navigator.py  session.py  xiaohongshu.py
cgao/database/: __init__.py  database_service.py  repository.py  schema.py  sqlite.py
cgao/exporters/: csv_exporter.py  excel_exporter.py  json_exporter.py
cgao/models/: __init__.py  author.py  comment.py  detail.py  detail_result.py  image.py  post.py  tag.py
cgao/pages/: detail_page.py  home_page.py  search_page.py
cgao/parsers/: __init__.py  author_parser.py  (+6 more)
config/: config.yaml
docs/: 01_Architecture.md  02_Roadmap.md
examples/: benchmark.py  browser_demo.py  collect_demo.py  collector_demo.py  comment_demo.py  db_info.py  detail_demo.py  export_demo.py  export_sqlite_to_csv.py  inspect_detail.py  login_demo.py  model_demo.py  navigate_demo.py  resume_demo.py  schema_demo.py  search_demo.py  session_demo.py  sql_demo.py  state_demo.py  thread_demo.py  url_demo.py  xhs_demo.py
storage/: README.md
tmp/: detail.html  note.txt
(+15 files in other folders)
